--- a/Desenv-ia/estatisticas_dev/estatistica_devs.ipynb
+++ b/Desenv-ia/estatisticas_dev/estatistica_devs.ipynb
@@ -545,18 +545,90 @@
     }
    ],
    "source": [
-    "# Correção do Dataframe\n",
+    "# Correção do Dataframe segundo pearson\n",
     "df_medidas.corr(method='pearson')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.9310236045054339)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Correlação entre duas variáveis.\n",
-    "df_medidas.idade.coor(df_medidas.altura)"
+    "df_medidas.idade.corr(df_medidas.altura)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>idade</th>\n",
+       "      <th>altura</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>idade</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.978803</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>altura</th>\n",
+       "      <td>0.978803</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           idade    altura\n",
+       "idade   1.000000  0.978803\n",
+       "altura  0.978803  1.000000"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Correção do Dataframe segundo Spearman\n",
+    "df_medidas.corr(method='spearman')"
    ]
   }
  ],
